--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width, initial-scale=1.0" />
@@ -9,11 +7,9 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="shortcut icon" href="Images/Logo 1.png" type="image/x-icon" />
 </head>
-
 <body>
   <!------------------------------------------------------------- is start -section-1 ---------------------------------------- --
 --------------------------------------------------------------------------------------->
-
   <section id="info@bksaccountants.com">
     <div class="cont">
       <div class="header-top">
@@ -29,7 +25,6 @@
   </section>
   <!-------------- is start navbar/ Header -----------
 ---------------------------------------------->
-
   <section class="header-mane">
     <div class="navbar">
       <div class="navbar-1" id="Auditing">
@@ -99,7 +94,6 @@
       </div>
     </div>
   </section>
-
   <!-- --------------------------------------------------  paneal-1 [Accounts] ---------------------------------------------------------
      ----------------------------------------------------------------------------------------------------------------------->
   <section id="Accounts">
@@ -145,12 +139,7 @@
             <h1 style="color: #333333; font-size: 42px">
               A firm you can rely on
             </h1>
-            <p style="
-                  width: 462px;
-                  color: #25465f;
-                  line-height: 29px;
-                  font-size: 17px;
-                ">
+            <p style=" width: 462px; color: #25465f;line-height: 29px;font-size: 17px;">
               Whatever may be the size of your business, we offer a full range
               of accounting and bookkeeping services at competitive prices. We
               are registered auditors and are authorised by the Association of
